<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>
        
    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edtWeightHint"
        android:textSize="20sp"
        android:ems="12"
        android:layout_marginTop="10dp"
        android:autofillHints="none"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edtHeightFtHint"
        android:textSize="20sp"
        android:ems="12"
        android:layout_marginTop="10dp"
        android:autofillHints="none"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edtHeightInHint"
        android:textSize="20sp"
        android:ems="12"
        android:layout_marginTop="10dp"
        android:autofillHints="none"
        android:inputType="number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalc"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

</LinearLayout>